# odyn

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: rust.yml
docs/: lichess-bot-config.example.yml  lichess-bot.md
src/: assert.rs  constants.rs  engine.rs  game.rs  lib.rs  main.rs  uci.rs
src/engine/: bot.rs  engine.rs  evaluator.rs  implementations.rs
src/engine/implementations/: blocks.rs  dynamics.rs  mock.rs  odyn_engine.rs  odyn_evaluator.rs  prediction.rs  repr.rs
src/engine/implementations/mock/: mock_engine.rs
src/game/: bitboard.rs  chess_move.rs  chessboard.rs  direction.rs  magic.rs  mailbox.rs  move_generator.rs  perft.rs  player.rs  utility.rs
src/uci/: commands.rs  controller.rs  protocol.rs  utils.rs
tests/game/: common.rs  main.rs  test_bitboard.rs  test_chessboard.rs  test_mailbox.rs  test_move_generator.rs  test_perft.rs  test_utility.rs
tests/game/common/: fen.rs  formatting.rs
