[package]
name = "odyn"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
anyhow = "1.0.86"
bit_reverse = "0.1.8"
const_for = "0.1.4"
fastrand = "2.1.0"
fxhash = "0.2.1"
ilog = "1.0.1"
lazy_static = "1.5.0"
rand = "0.8.5"
smallvec = "1.13.2"
wasm-bindgen = "0.2.92"
